Duplicated libraries removed

--- a/heart-disease.ipynb
+++ b/heart-disease.ipynb
@@ -26,11 +26,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from sklearn.datasets import load_iris\n",
-    "from sklearn.tree import DecisionTreeClassifier,export_graphviz\n",
+    "from sklearn.tree import export_graphviz\n",
     "from subprocess import call\n",
     "from IPython.display import Image"
    ]
