--- a/heart-disease.ipynb
+++ b/heart-disease.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's import the libraries that will be used..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -341,37 +348,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's check the features and plot some graphs to understand them better..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Parameters:\n",
     "\n",
-    "#### age: age in years\n",
+    "age: age in years\n",
     "\n",
-    "#### sex: (1 = male; 0 = female)\n",
+    "sex: (1 = male; 0 = female)\n",
     "\n",
-    "#### cp: chest pain type\n",
+    "cp: chest pain type\n",
     "\n",
-    "#### trestbps: resting blood pressure (in mm Hg on admission to the hospital)\n",
+    "trestbps: resting blood pressure (in mm Hg on admission to the hospital)\n",
     "\n",
-    "#### chol: serum cholestoral in mg/dl\n",
+    "chol: serum cholestoral in mg/dl\n",
     "\n",
-    "#### fbs: (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
+    "fbs: (fasting blood sugar > 120 mg/dl) (1 = true; 0 = false)\n",
     "\n",
-    "#### restecg: resting electrocardiographic results\n",
+    "restecg: resting electrocardiographic results\n",
     "\n",
-    "#### thalach: maximum heart rate achieved\n",
+    "thalach: maximum heart rate achieved\n",
     "\n",
-    "#### exang: exercise induced angina (1 = yes; 0 = no)\n",
+    "exang: exercise induced angina (1 = yes; 0 = no)\n",
     "\n",
-    "#### oldpeak: ST depression induced by exercise relative to rest\n",
+    "oldpeak: ST depression induced by exercise relative to rslope: the slope of the peak exercise ST segment\n",
     "\n",
-    "#### slope: the slope of the peak exercise ST segment\n",
+    "ca: number of major vessels (0-3) colored by flourosopy\n",
     "\n",
-    "#### ca: number of major vessels (0-3) colored by flourosopy\n",
+    "thal: 3 = normal; 6 = fixed defect; 7 = reversable defect\n",
     "\n",
-    "#### thal: 3 = normal; 6 = fixed defect; 7 = reversable defect\n",
+    "target: 1 or 0 \n",
     "\n",
-    "#### target: 1 or 0 \n",
-    "\n",
-    "##### More info here: https://www.kaggle.com/ronitf/heart-disease-uci"
+    "*More info here: https://www.kaggle.com/ronitf/heart-disease-uci*"
    ]
   },
   {
@@ -578,6 +590,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can plot the correlation between all features in a heatmap to see which ones affects more the output (target)..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -605,7 +624,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the above graph, we see that 'exang', 'cp' and 'oldpeak' has a stronger affect on the output.  \n",
+    "Later, after building some models like DecisionTree or RandomForest, we can check the models importance to check if they match with this result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Spliting the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll be using Cross-validation to test some models.  \n",
+    "Although the Cross-validation is a good measure, I think is a good idea to separe 20% of the dataset as a never-seen data to test the model..."
    ]
   },
   {
@@ -796,6 +831,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the train dataset (X_train and y_train) is perfectly balanced, as the target is wether 0 or 1, we should expect the mean equal to 0.5 (50%)..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -820,6 +862,13 @@
    "metadata": {},
    "source": [
     "## Balancing the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can se the dataset isn't balanced, let's balance it using the SMOTE, an Over-sampling technique..."
    ]
   },
   {
@@ -897,6 +946,14 @@
    "metadata": {},
    "source": [
     "## Building some Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try out some models and see the Cross-validation results for each one of them.  \n",
+    "I'll be using an arbitrary *random_state* value in an attempt to get the same results everytime a run the same model..."
    ]
   },
   {
@@ -1002,6 +1059,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above scores, we can see that the best models were RandomForest and LogisticRegression.  \n",
+    "So let's try to tune their hyperparameters to get better scores..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -1054,9 +1119,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    6.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   25.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 216 out of 216 | elapsed:   35.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    6.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   24.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 216 out of 216 | elapsed:   33.6s finished\n",
       "/home/vinicius/.local/lib/python3.6/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
       "  DeprecationWarning)\n"
      ]
@@ -1139,6 +1204,14 @@
    "metadata": {},
    "source": [
     "## Exploring Random Forest Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RandomForest can deliver some great informations about the model, like feature importances and the decision trees used to classify the data.  \n",
+    "Let's check them..."
    ]
   },
   {
@@ -1306,6 +1379,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above graph, we can see that the most important features kind of match our expectations from the heatmap previously plotted.  \n",
+    "Let's also plot the DecisionTree with the code below..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -1342,6 +1423,13 @@
    "metadata": {},
    "source": [
     "## Hyperparameters Tuning (Logistic Regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it's time to tune the LogisticRegression model..."
    ]
   },
   {
@@ -1394,8 +1482,8 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  58 tasks      | elapsed:    3.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 144 out of 144 | elapsed:    8.7s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 108 tasks      | elapsed:    5.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 144 out of 144 | elapsed:    7.8s finished\n",
       "/home/vinicius/.local/lib/python3.6/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
       "  DeprecationWarning)\n"
      ]
@@ -1476,52 +1564,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's choose the best the best model based on the test data...  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=2, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=None,\n",
-       "            oob_score=False, random_state=2, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RF Test Score: 0.8852459016393442\n",
+      "LR Test Score: 0.8852459016393442\n"
+     ]
     }
    ],
    "source": [
-    "models = {cross_val_score(rf_best_grid, X_test, y_test, cv = 3).mean(): rf_best_grid, \n",
-    "          cross_val_score(lr_best_grid, X_test, y_test, cv = 3).mean(): lr_best_grid}\n",
-    "\n",
-    "best_model = models[max(models)]\n",
-    "best_model"
+    "print('RF Test Score:',rf_best_grid.score(X_test, y_test))\n",
+    "print('LR Test Score:',lr_best_grid.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see from above the results are the same.  \n",
+    "So, let's stick with the RandomForest as our best model..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8852459016393442"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "best_model.score(X_test, y_test)"
+    "best_model = rf_best_grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making the predictions (only for visualization)..."
    ]
   },
   {
@@ -1693,6 +1782,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This report shows the final model precision..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -1716,13 +1812,6 @@
    "source": [
     "print(classification_report(pred,y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
