--- a/heart-disease.ipynb
+++ b/heart-disease.ipynb
@@ -593,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can plot the correlation between all features in a heatmap to see which ones affects more the output (target)..."
+    "We can plot the correlation between all features in a heatmap to see which ones affects more the output (*target*)..."
    ]
   },
   {
@@ -624,8 +624,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above graph, we see that 'exang', 'cp' and 'oldpeak' has a stronger affect on the output.  \n",
-    "Later, after building some models like DecisionTree or RandomForest, we can check the models importance to check if they match with this result."
+    "From the above graph, we see that *exang*, *cp*, *oldpeak*, *thalach* and *ca* have a stronger affect on the output.  \n",
+    "Later, after building some models like *Decision Tree* or *Random Forest*, we can check the models importance to check if they match with this result."
    ]
   },
   {
@@ -639,8 +639,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'll be using Cross-validation to test some models.  \n",
-    "Although the Cross-validation is a good measure, I think is a good idea to separe 20% of the dataset as a never-seen data to test the model..."
+    "I'll be using *Cross-validation* to test some models.  \n",
+    "Although the *Cross-validation* is a good measure, I think is a good idea to separe 20% of the dataset as a unseen data to test the model..."
    ]
   },
   {
@@ -834,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the train dataset (X_train and y_train) is perfectly balanced, as the target is wether 0 or 1, we should expect the mean equal to 0.5 (50%)..."
+    "If the train dataset (*X_train* and *y_train*) is perfectly balanced, as the target is wether 0 or 1, we should expect the mean equal to 0.5 (50%)..."
    ]
   },
   {
@@ -868,7 +868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can se the dataset isn't balanced, let's balance it using the SMOTE, an Over-sampling technique..."
+    "As we can se the dataset isn't balanced, let's balance it using the *SMOTE*, an Over-sampling technique..."
    ]
   },
   {
@@ -952,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try out some models and see the Cross-validation results for each one of them.  \n",
+    "Let's try out some models and see the *Cross-validation* results for each one of them.  \n",
     "I'll be using an arbitrary *random_state* value in an attempt to get the same results everytime a run the same model..."
    ]
   },
@@ -1062,7 +1062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above scores, we can see that the best models were RandomForest and LogisticRegression.  \n",
+    "From the above scores, we can see that the best models were *Random Forest* and *Logistic Regression*.  \n",
     "So let's try to tune their hyperparameters to get better scores..."
    ]
   },
@@ -1210,7 +1210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RandomForest can deliver some great informations about the model, like feature importances and the decision trees used to classify the data.  \n",
+    "*Random Forest* can deliver some great informations about the model, like feature importances and the decision trees used to classify the data.  \n",
     "Let's check them..."
    ]
   },
@@ -1383,7 +1383,7 @@
    "metadata": {},
    "source": [
     "From the above graph, we can see that the most important features kind of match our expectations from the heatmap previously plotted.  \n",
-    "Let's also plot the DecisionTree with the code below..."
+    "Let's also plot the *Decision Tree* with the code below..."
    ]
   },
   {
@@ -1429,7 +1429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now it's time to tune the LogisticRegression model..."
+    "Now it's time to tune the *Logistic Regression* model..."
    ]
   },
   {
@@ -1567,7 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's choose the best the best model based on the test data...  "
+    "Now, for evaluation purpose, let's choose the best the best model based on the test data...  "
    ]
   },
   {
@@ -1585,8 +1585,8 @@
     }
    ],
    "source": [
-    "print('RF Test Score:',rf_best_grid.score(X_test, y_test))\n",
-    "print('LR Test Score:',lr_best_grid.score(X_test, y_test))"
+    "print('RF Test Score:', rf_best_grid.score(X_test, y_test))\n",
+    "print('LR Test Score:', lr_best_grid.score(X_test, y_test))"
    ]
   },
   {
@@ -1594,7 +1594,7 @@
    "metadata": {},
    "source": [
     "We can see from above the results are the same.  \n",
-    "So, let's stick with the RandomForest as our best model..."
+    "So, let's stick with the *Random Forest* as our best model..."
    ]
   },
   {
